--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,7 +1,7 @@
 $red: #ef3340;
 
-$primary: #ff6f61;
-// $link: $blue;
+$primary: #e50354;
+$link: #ff6f61;
 // $info: $cyan;
 // $success: $green;
 // $warning: $yellow;
