first pass at sessions page
- pulls in schedule/settings
- fix tabs logic for logged-in/scheduleLive
- add session cards
- move pickApi to utils and add pickCdn
- update track colors
- update atrium to point to sessions

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -9,10 +9,11 @@ $link: #ff6f61;
 // $dark: $grey-darker;
 // $text: $grey-dark;
 
-$track-act: #6c63ff;
-$track-empower: #f4313f;
-$track-influence: #a8003d;
-$track-transform: #4c0047;
+$track-official: #556183;
+$track-act: #ff6f61;
+$track-empower: #6c63ff;
+$track-influence: #d27fcc;
+$track-transform: #e50354;
 
 $greyish: #757a8a;
 
