update for new schema
- take out terms link from footer
- take out terms from register
- use new icons in session cards
- update SessionCard to use new schema
- fix rtl issue with SpeakerRow
- fix scroll behaviour

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -80,9 +80,15 @@ html {
   scroll-behavior: smooth;
 }
 
-@include mobile {
+@include touch {
   html {
-    scroll-padding-top: $navbar-height;
+    scroll-padding-top: $size-normal + 1rem;
+  }
+}
+
+@include desktop {
+  html {
+    scroll-padding-top: $navbar-height + $size-normal + 1rem;
   }
 }
 
