--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -94,6 +94,10 @@ html {
 
 .section.is-small {
   padding: 1.5rem 1.5rem;
+
+  @include mobile {
+    padding: 1.5rem 0.75rem;
+  }
 }
 
 .icon svg {
