Work on cookies
- add translations in
- move cookie.content to yaml file
- fix bulma buttons rtl
- allow language changing with cookie popup
- made content links bold

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -50,6 +50,13 @@
   }
 }
 
+.buttons {
+  .button:not(:last-child):not(.is-fullwidth) {
+    margin-right: unset;
+    margin-inline-end: 0.5rem;
+  }
+}
+
 //
 // Custom tabs
 //
@@ -103,4 +110,8 @@ html {
 .icon svg {
   width: 1.5em;
   height: 1.5em;
+}
+
+.content a {
+  font-weight: bold;
 }
