--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -15,6 +15,8 @@ $track-empower: #6c63ff;
 $track-influence: #d27fcc;
 $track-transform: #e50354;
 
+$navy: #2c3242;
+
 $greyish: #757a8a;
 
 $family-sans-serif: Avenir, Helvetica, Arial, sans-serif;
