Event page changes 4 tile layout, may need to change

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -100,3 +100,10 @@ html {
   width: 1.5em;
   height: 1.5em;
 }
+
+
+.section-headings {
+  color: $section-headings-coloured;
+  font-weight: bold;
+}
+
