--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,7 +1,7 @@
 $red: #ef3340;
 
 $primary: #e50354;
-$link: #ff6f61;
+$link: black;
 // $info: $cyan;
 // $success: $green;
 // $warning: $yellow;
@@ -16,6 +16,12 @@ $track-influence: #d27fcc;
 $track-transform: #e50354;
 
 $greyish: #757a8a;
+$light-grey: #b5b5b5;
+$lightest-grey:#fafafa;
+
+
+$section-headings-coloured: #6c63ff;
+$button-coloured: #6c63ff;
 
 $family-sans-serif: Avenir, Helvetica, Arial, sans-serif;
 $family-monospace: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
