--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -31,7 +31,7 @@ $lightest-grey:#fafafa;
 
 
 $section-headings-coloured: #6c63ff;
-$button-coloured: #6c63ff;
+$button-coloured: $cc-coral;
 
 $family-sans-serif: Avenir, -apple-system, system-ui, BlinkMacSystemFont,
   'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
