--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -30,9 +30,9 @@ $greyish: #757a8a;
 
 $section-headings-coloured: #6c63ff;
 
-$family-sans-serif: Avenir, -apple-system, system-ui, BlinkMacSystemFont,
-  'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji',
-  'Segoe UI Emoji', 'Segoe UI Symbol';
+$family-sans-serif: acumin-pro, Avenir, -apple-system, system-ui,
+  BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 $family-monospace: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace;
 
 $navbar-height: 3.5rem;
