--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -25,6 +25,8 @@ $track-empower: $cc-light-blue;
 $track-influence: #d27fcc;
 $track-transform: #e50354;
 
+$navy: #2c3242;
+
 $greyish: #757a8a;
 
 $section-headings-coloured: #6c63ff;
