--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -121,3 +121,9 @@ html {
 .content a {
   font-weight: bold;
 }
+
+.message.is-narrow {
+  max-width: 540px;
+  margin-left: auto;
+  margin-right: auto;
+}
