--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -84,9 +84,9 @@
 //
 // Misc
 //
-html {
-  scroll-behavior: smooth;
-}
+// html {
+//   scroll-behavior: smooth;
+// }
 
 @include touch {
   html {
