--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,6 +2,8 @@ $family-sans-serif: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
   'Segoe UI Symbol';
 
+$primary: #5724f0;
+
 @import '~bulma/sass/utilities/_all.sass';
 
 //
