fix: make links red

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,6 +3,7 @@ $family-sans-serif: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI',
   'Segoe UI Symbol';
 
 $primary: #ef3340;
+$link: #ef3340;
 
 $sideTabs-background: white;
 $sideTabs-color: black;
