fix: add official IFRC colours

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -2,8 +2,9 @@ $family-sans-serif: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI',
   Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
   'Segoe UI Symbol';
 
-$primary: #ef3340;
-$link: #ef3340;
+$primary: #e32219;
+$secondary: #1a3283;
+$link: #e32219;
 
 $sideTabs-background: white;
 $sideTabs-color: black;
