--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,10 +1,10 @@
-$family-sans-serif: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI',
-  Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-  'Segoe UI Symbol';
+$family-sans-serif: 'Noto Sans', system-ui -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji',
+  'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $primary: #e32219;
-$secondary: #1a3283;
-$link: #e32219;
+$secondary: #6c7e7e;
+$link: $primary;
 
 $sideTabs-background: white;
 $sideTabs-color: black;
