--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -3,8 +3,7 @@ $family-sans-serif: 'Noto Sans', system-ui -apple-system, BlinkMacSystemFont,
   'Segoe UI Emoji', 'Segoe UI Symbol';
 
 $primary: #e32219;
-$link: #6c7e7e;
-// $link: $primary;
+$link: #1a3283;
 
 $sideTabs-background: white;
 $sideTabs-color: black;
